--- a/WebApp/templates/404.html
+++ b/WebApp/templates/404.html
@@ -1,1 +1,8 @@
-404
+<style>
+body{
+  color: #000;
+  background-image: url("{{ url_for('static',filename='images/Oops.png') }}");
+  background-repeat: no-repeat;
+  background-size: auto;
+}
+</style>
