--- a/WebApp/templates/newsfeed.html
+++ b/WebApp/templates/newsfeed.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="{{ url_for('static',filename='styles/bootstrap.css') }}" />
+<link rel="stylesheet" href="{{ url_for('static',filename='styles/bootstrap-minty.css') }}" />
 {% block body %}
   <br><h1 style="text-align: center;">뉴스피드</h1><br>
   {% for index in range(5) %}
