--- a/WebApp/templates/view/view-error.html
+++ b/WebApp/templates/view/view-error.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="{{ url_for('static',filename='styles/bootstrap.css') }}" />
+<link rel="stylesheet" href="{{ url_for('static',filename='styles/bootstrap-minty.css') }}" />
 {% block body %}
 <div class="jumbotron">
   <h3 class="display-3">Tags</h3>
