--- a/WebApp/templates/view/view.html
+++ b/WebApp/templates/view/view.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="{{ url_for('static',filename='styles/bootstrap.css') }}" />
+<link rel="stylesheet" href="{{ url_for('static',filename='styles/bootstrap-minty.css') }}" />
 {% block body %}
 <form action="/view-result" method="GET">
 	<div class="login">
@@ -6,7 +6,7 @@
 			<div class="app-title">
 				<h1>Input Filename to view</h1>
 			</div>
-
+			
 			<div class="login-form">
 				<div class="control-group">
 				<input type="text" class="login-field" value="" placeholder="filename" name="filename">
