--- a/WebApp/templates/signup.html
+++ b/WebApp/templates/signup.html
@@ -1,11 +1,20 @@
-<link rel="stylesheet" href="{{ url_for('static',filename='styles/bootstrap.css') }}" />
+<link rel="stylesheet" href="{{ url_for('static',filename='styles/login.css') }}" />
+<link rel="stylesheet" href="{{ url_for('static',filename='styles/bootstrap-minty.css') }}" />
 {% block body %}
 <form action="/signup-back" method="POST">
-    <h1>회원가입</h1>
-    <input type="text" class="signup-field" value="" placeholder="사용자명을 입력하세요" name="username"><br>
-    <input type="text" class="signup-field" value="" placeholder="이메일을 입력하세요" name="email"><br>
-    <input type="password" class="signup-field" value="" placeholder="비밀번호를 입력하세요" name="password"><br>
-    <input type="submit" value="회원가입" class="" ><br>
+  <div class="login">
+	<div class="login-screen">
+    <div class="app-title"><h1>회원가입</h1></div>
+    <div class="login-form">
+      <div class="control-group">
+    <input type="text" class="signup-field" placeholder="사용자명을 입력하세요" name="username"><br>
+    <input type="text" class="signup-field" placeholder="이메일을 입력하세요" name="email"><br>
+    <input type="password" class="signup-field" placeholder="비밀번호를 입력하세요" name="password"><br>
+    <input type="submit" value="회원가입" class="btn btn-primary btn-large btn-block" ><br>
+      </div>
+    </div>
     <h5>이미 회원이신가요? <a  href="login">로그인</a></h5>
+  </div>
+  </div>
 </form>
 {% endblock %}
