WebApp development (#maybe_final)

--- a/WebApp/templates/signup.html
+++ b/WebApp/templates/signup.html
@@ -1,5 +1,13 @@
 <link rel="stylesheet" href="{{ url_for('static',filename='styles/login.css') }}" />
 <link rel="stylesheet" href="{{ url_for('static',filename='styles/bootstrap-minty.css') }}" />
+<style>
+body{
+  color: #000;
+  background-image: url("{{ url_for('static',filename='images/background1.png') }}");
+  background-repeat: no-repeat;
+  background-size: auto;
+}
+</style>
 {% block body %}
 <form action="/signup-back" method="POST">
   <div class="login">
