--- a/WebApp/templates/view/search-result.html
+++ b/WebApp/templates/view/search-result.html
@@ -1,4 +1,12 @@
 <link rel="stylesheet" href="{{ url_for('static',filename='styles/bootstrap-minty.css') }}" />
+<style>
+body{
+  color: #000;
+  background-image: url("{{ url_for('static',filename='images/background1.png') }}");
+  background-repeat: no-repeat;
+  background-size: auto;
+}
+</style>
 {% block body %}
   <br><h1 style="text-align: center;">검색 결과</h1><br>
   {% for index in range(length) %}
