--- a/WebApp/templates/view/search-result.html
+++ b/WebApp/templates/view/search-result.html
@@ -1,3 +1,4 @@
+<title>ShareSpace</title>
 <link rel="stylesheet" href="{{ url_for('static',filename='styles/bootstrap-minty.css') }}" />
 <style>
 body{
