--- a/WebApp/templates/index.html
+++ b/WebApp/templates/index.html
@@ -1,4 +1,4 @@
-<title>거긴안대</title>
+<title>ShareSpace</title>
 <link rel="stylesheet" href="{{ url_for('static',filename='styles/bootstrap-minty.css') }}" />
 <style>
 body{
@@ -16,36 +16,38 @@ body{
 <div id="menu" style="text-align: center;">
     <h2>
       <form action="/search" method="POST" class="form-inline my-2 my-lg-0"
-      style="position: absolute; top: 600px; left: 30%;">
-          <input class="form-control mr-sm-2" type="text" placeholder="Search" name="data">
-          <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+      style="margin-left: : 30%; position: absolute; top: 600px; left: 24%;">
+          <input class="form-control mr-sm-2" type="text"
+          placeholder="Search Tags & Filename" name="data" style="font-size: 100%;">
+          <button class="btn btn-secondary my-2 my-sm-0" type="submit"
+          style="font-size: 100%;">Search</button>
       </form>
     </h2>
     <h3>
-      <a href="logout" style="color:#fff; font-size: 150%;">
+      <a href="logout" style="color:#fff;">
           <button type="button" class="btn btn-outline-primary btn-lg btn-block"
-          style="position: absolute; top: 800px;">
+          style="position: absolute; top: 800px; font-size: 170%;">
               로그아웃
           </button>
       </a><br><br>
-      <a href="upload" style="color:#fff; font-size: 150%;">
+      <a href="newsfeed" style="color:#fff;">
           <button type="button" class="btn btn-outline-info btn-lg btn-block"
-          style="position: absolute; top: 1000px;">
+          style="position: absolute; top: 950px; font-size: 170%;">
+              뉴스피드
+          </button>
+      </a><br><br>
+      <a href="upload" style="color:#fff;">
+          <button type="button" class="btn btn-outline-secondary btn-lg btn-block"
+          style="position: absolute; top: 1100px; font-size: 170%;">
               이미지 업로드
           </button>
       </a><br><br>
-      <a href="newsfeed" style="color:#fff; font-size: 150%;">
-          <button type="button" class="btn btn-outline-secondary btn-lg btn-block"
-          style="position: absolute; top: 1200px;">
-              뉴스피드
-          </button><br><br>
-      </a>
-      <a href="signout" style="color:#fff; font-size: 150%;">
+      <a href="signout" style="color:#fff;">
           <button type="button" class="btn btn-outline-success btn-lg btn-block"
-          style="position: absolute; top: 1400px;">
+          style="position: absolute; top: 1250px; font-size: 170%;">
               탈퇴
           </button>
-      </a><br><br>
+      </a>
     </h3>
 </div>
 {% endblock %}
