--- a/WebApp/templates/newsfeed.html
+++ b/WebApp/templates/newsfeed.html
@@ -1,14 +1,15 @@
+<title>ShareSpace</title>
 <link rel="stylesheet" href="{{ url_for('static',filename='styles/bootstrap-minty.css') }}" />
 <style>
 body{
   color: #000;
-  background-image: url("{{ url_for('static',filename='images/background1.png') }}");
-  background-repeat: no-repeat;
+  background-image: url("{{ url_for('static', filename='images/background1.png') }}");
+  background-repeat: repeat;
   background-size: auto;
 }
 </style>
 {% block body %}
-  <br><h1 style="text-align: center;">뉴스피드</h1><br>
+  <br><h1 style="color: white; text-align: center;">뉴스피드</h1><br>
   {% for index in range(length) %}
     <a href="{{ url_for('view_back', filename=view[index]) }}">
       <div class="jumbotron">
