--- a/WebApp/templates/view/view-error.html
+++ b/WebApp/templates/view/view-error.html
@@ -1,3 +1,4 @@
+<title>ShareSpace</title>
 <link rel="stylesheet" href="{{ url_for('static',filename='styles/bootstrap-minty.css') }}" />
 <style>
 body{
