Frontend : login.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
       position: relative;
       width: 100%;
       height: 100%;
-      background: url("{{ url_for('static', filename='background.jpg') }}") center center no-repeat;
+      background: url("{{ url_for('static', filename='background.jpg') }}") center center;
       background-size: cover;
     }
     </style>
