--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 </div>
 <div style="text-align: center; font-size: 150%;">
     <h1 class="welcome" style="margin: 0;">Welcome to ShareSpace, <span style="color: #0f3443; font-size: 150%;">{{username}}</span>!</h1>
-    <p style="margin: 0;">ShareSpace에 오신 것을 환영합니다</p>
+    <p style="margin: 0; margin-top: 10px;">ShareSpace에 오신 것을 환영합니다</p>
 </div>
 <div class="buttons">
     <a class="waves-effect waves-light btn teal darken-4" href="/logout">Logout</a>
@@ -19,28 +19,28 @@
         <div class="card">
             <img src="/static/Taj-Mahal.jpg" alt="Image" style="width:100%">
             <div class="container">
-                <h4><b>Taj-Mahal</b></h4> 
+                <h5><b>Taj-Mahal</b></h5> 
                 <p>Lorem ipsum dolor sit amet...</p> 
             </div>
         </div>
         <div class="card">
             <img src="/static/Bayon-Temple.jpg" alt="Image" style="width:100%">
             <div class="container">
-                <h4><b>Bayon-Temple</b></h4> 
+                <h5><b>Bayon-Temple</b></h5> 
                 <p>Lorem ipsum dolor sit amet...</p> 
             </div>
         </div>
         <div class="card">
             <img src="/static/Eiffel-Tower.jpg" alt="Image" style="width:100%">
             <div class="container">
-                <h4><b>Eiffel-Tower</b></h4> 
+                <h5><b>Eiffel-Tower</b></h5> 
                 <p>Lorem ipsum dolor sit amet...</p> 
             </div>
         </div>
         <div class="card">
             <img src="/static/Gyeongbokgung.jpg" alt="Image" style="width:100%">
             <div class="container">
-                <h4><b>Gyeongbokgung</b></h4> 
+                <h5><b>Gyeongbokgung</b></h5> 
                 <p>Lorem ipsum dolor sit amet...</p> 
             </div>
         </div>
