--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,53 @@
-<h1>ShareSpace 시작하기</h1>
-<form action="/login" method="POST">
-    <input type="text" name="username" placeholder="사용자명을 입력하세요">
-    <input type="text" name="email" placeholder="이메일을 입력하세요">
-    <input type="submit" name="시작하기">
-</form>
+{% extends 'base.html' %}
+
+{% block page_content %}
+<style>
+    .input-field>label {
+        font-size: 120%;
+        color: #FFFFFF;
+    }
+    ::placeholder { 
+        font-size: 120%;
+        color: #000000;
+        opacity: 1; 
+    }
+
+    :-ms-input-placeholder {
+        font-size: 120%;
+        color: #000000;
+    }
+
+    ::-ms-input-placeholder { 
+        font-size: 120%;
+        color: #000000;
+    }
+</style>
+<div class="logo">
+    <img src="{{ url_for('static', filename='logo.png') }}"
+    width="20%" style="max-width:100%; max-height:100%;"/>
+</div>
+<h1 style="margin: 0; margin-bottom: 20px; text-align: center; font-family: 'Lobster', cursive;">ShareSpace 시작하기</h1>
+<div style="display:flex;
+justify-content:center;
+align-items:center;">
+    <form class="col s12" action="/login" method="POST" class="row" style="width: 60%; ">
+        <div class="row" style="margin-top: 10px; margin-bottom: 10px;">
+            <div class="input-field col s12">
+                <input id="username" type="text" name="username"
+                placeholder="사용자명을 입력하세요" class="validate">
+                <label for="username">Username</label>
+            </div>
+        </div>
+        <div class="row" style="margin-bottom: 10px;">
+            <div class="input-field col s12">
+                <input id="email" type="email" name="email"
+                placeholder="이메일을 입력하세요" class="validate">
+                <label for="email">Email</label>
+            </div>
+        </div>
+        <input type="submit" value="로그인" class="waves-effect waves-light btn"
+        style="padding: 10px; text-align: center; width: 100%;
+        background: linear-gradient(to right, #74EBD5, #ACB6E5); font-size: 120%;"/>
+    </form>
+</div>
+{% endblock %}
