--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,6 @@
 <head>
     <title>ShareSpace</title>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <style>
     body {
       position: relative;
