done : vrview template, fix : login btn

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
       position: relative;
       width: 100%;
       height: 100%;
-      background: url("{{ url_for('static', filename='background.jpg') }}") center center;
+      background: url("{{ url_for('static', filename='background-default.png') }}") center center;
       background-size: cover;
     }
     </style>
