--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,11 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Lobster');
+@import url('https://fonts.googleapis.com/css?family=Roboto');
 html, body { width: 100%; height: 100%; margin: 0; padding: 0; }
-body:before {
-    content: ''; position: absolute;
-    top: 0; right: 0; bottom: 0; left: 0;
-    background-image: linear-gradient(#FEAC5E, #C779D0, #4BC0C8);
-    opacity: .6; z-index: -1;
-}
 .content .logo { display:flex; justify-content:center; align-items:center; }
 .content .welcome { font-family: 'Lobster', cursive; }
 .content .buttons {
