--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
 <div class="buttons">
     <a class="waves-effect waves-light btn teal darken-4" href="/logout">Logout</a>
     <a class="waves-effect waves-light btn teal darken-2" href="#">Search</a>
-    <a class="waves-effect waves-light btn teal" href="#">Upload</a>
+    <a class="waves-effect waves-light btn teal" href="/upload">Upload</a>
 </div>
 <div class="centered">
     <section class="cards">
