--- a/templates/vrview/view.html
+++ b/templates/vrview/view.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 
 {% block head_content %}
-<script src="https://storage.googleapis.com/vrview/2.0/build/vrview.min.js"></script>
+<!-- <script src="https://storage.googleapis.com/vrview/2.0/build/vrview.min.js"></script> -->
+<script src="{{ url_for('static', filename='vrview/build/vrview.min.js') }}"></script>
 <link rel="stylesheet" href="{{ url_for('static', filename='css/view.css') }}">
 {% endblock %}
 
